upd: refactor java service with concurrency